<resources>
    <string name="app_name">Tender</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">658612877621170</string>

    <string name="action_settings">Settings</string>
    <string name="entrada">Entrada</string>
    <string name="massa">Massa</string>
    <string name="salada">Salada</string>
    <string name="bebida">Drink</string>
    <string name="likedRecipes">Receitas que eu Curti</string>
    <string name="myRecipes">Minhas Receitas</string>
    <string name="camera">Câmera</string>
    <string name="galeria">Galeria</string>
    <string name="visualizar">Visualizar</string>
    <string name="slcOpcao">Selecione uma opção</string>
    <string name="vegan">Vegan</string>
    <string name="doce">Doce</string>

</resources>
